# tabana-plaja

./: README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: landing-ci.yml  metrics-ci.yml  services-ci.yml  soroban-ci.yml
.husky/: pre-commit
apps/landing/: index.ts
apps/metrics/: README.md  package-lock.json  package.json
apps/metrics/app/: layout.tsx  not-found.tsx  page.tsx
apps/services/: .eslintrc.js  Cargo.toml  README.md  package.json  tsconfig.json
apps/soroban/: .gitignore  Cargo.toml  README.md
