[package]
name = "tabana-plaja-services"
version = "0.1.0"
edition = "2021"
description = "Rust orchestrator for tabana-plaja services"
authors = ["Tabana Plaja Team"]

[[bin]]
name = "orchestrator"
path = "src/bin/orchestrator.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4" 